--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ It’s a promise that my answer will always stay the same — I choose you, ever
         Sometimes I just feel like hugging you for no reason at all.\n\
         So can i ask you for a promise…\n\
  will you be my forever teddy- the one i can always be with ? 🧸 `,
-        t6: `Happy promise me my forever Promise…
+        t6: `Happy Promise Day my forever Promise…
        
         Honestly their are plenty of the things that i wants to do for you or tbh i wants to do everything for you. Everything that can put a smile on your face… I would love to do all that but i wants to give you promises.
 
